<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    tools:context=".ui.consultaproducto.ConsultaArticuloFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/ca"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorBackground"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></View>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/caalmacen"
                android:layout_weight="0.75"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCAAlmacen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@drawable/background_input"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cazona"
                android:layout_weight="0.75"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCAZona"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@drawable/background_input"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/casituacion"
                android:layout_weight="0.75"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCASituacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="@drawable/background_input"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <Button
                android:id="@+id/btn_caUbicaciones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.75"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/caubicaciones"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_caArticulos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/caarticulos"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_caSalir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/casalir"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>