<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    tools:context="ui.datalogistica.DataLogisticaActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/datalogisticaIngresar"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorBackground"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/textView3"></View>


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticacodigo"
                android:layout_weight="0.75"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCodigo"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/background_input"
                android:textColor="@color/colorBlack"
                android:ems="10"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaarticulo"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblCodigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="..."
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticadescripcion"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="..."
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaEAN13"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblEAN13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="..."
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaDUN14"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblDUN14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="..."
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaUnidadesCaja"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblUnidadesCajas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaBultosCaja"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblBultosCaja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaCamasPallet"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblCamasPallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaAltoCaja"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblAltoCaja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaAnchoCaja"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblAnchoCaja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/datalogisticaProfunCaja"
                android:layout_weight="0.75"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/lblProfunCaja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="0"
                android:layout_weight="0.75"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_dlSalir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/datalogisticaSalir"
                android:textColor="@color/colorWhite"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>